# sfml-test

./: .gitignore  CMakeLists.txt
resources/: shader.frag
src/: main.cpp
